--- a/05-app-clima/package.json
+++ b/05-app-clima/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "capitalize": "^2.0.4",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "inquirer": "^8.1.2"
